Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test13.java
/*
 * Test13
 * @ Objetivo:Detectar que la sentencia o bloque correspondiente al then.
 */
class clase
{
	dynamic void metodo()
	{
		if (3*4 != 4*3)
	}
	
}
